--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "noEmit": true,
     "jsx": "preserve",
     "experimentalDecorators": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "baseUrl": "./src"
   },
   "include": ["src"]
 }
