--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "private": true,
   "dependencies": {
     "@material-ui/styles": "^3.0.0-alpha.10",
+    "@types/classnames": "^2.2.7",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.4",
     "@types/react": "^16.8.13",
+    "@types/react-burger-menu": "^2.2.4",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
+    "classnames": "^2.2.6",
+    "easings-css": "^1.0.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
+    "react-burger-menu": "^2.6.8",
     "react-dom": "^16.8.6",
+    "react-icons": "^3.6.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.3",
+    "use-media": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
