--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "https://solutions.hyfn.com/hubfs/HYFN%202019"
 }
