domain agnostic build paths

--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://solutions.hyfn.com/hubfs/HYFN%202019"
+  "homepage": "/hubfs/HYFN%202019"
 }
