Homepage Intro headline

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-burger-menu": "^2.6.8",
     "react-dom": "^16.8.6",
     "react-icons": "^3.6.1",
+    "react-intersection-observer": "^8.23.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "typescript": "^3.4.3",
