LSD Color Trails

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/styles": "^4.0.0-beta.1",
     "@types/classnames": "^2.2.7",
     "@types/jest": "^24.0.11",
+    "@types/lodash": "^4.14.126",
     "@types/node": "^11.13.4",
     "@types/react": "^16.8.13",
     "@types/react-burger-menu": "^2.2.4",
@@ -13,7 +14,7 @@
     "@types/react-router-dom": "^4.3.2",
     "classnames": "^2.2.6",
     "easings-css": "^1.0.0",
-    "mobx": "^5.9.4",
+    "mobx": "4",
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.8",
