--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^4.3.2",
     "classnames": "^2.2.6",
     "easings-css": "^1.0.0",
+    "jss-plugin-extend": "^10.0.0-alpha.16",
     "mobx": "4",
     "mobx-react": "^5.4.3",
     "react": "^16.8.6",
