--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
     "classnames": "^2.2.6",
+    "easing": "^1.2.1",
     "easings-css": "^1.0.0",
+    "matter-js": "^0.14.2",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
+    "poly-decomp": "^0.3.0",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.8",
     "react-dom": "^16.8.6",
