--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^3.6.1",
     "react-intersection-observer": "^8.23.0",
     "react-router-dom": "^5.0.0",
+    "react-router-scroll-4": "^1.0.0-beta.2",
     "react-scripts": "3.0.0",
     "typescript": "^3.4.3",
     "use-media": "^1.3.0"
