--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/styles": "^4.0.0-beta.1",
+    "@material-ui/styles": "^4.0.1",
     "@types/classnames": "^2.2.7",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.126",
     "@types/node": "^11.13.4",
-    "@types/react": "^16.8.13",
+    "@types/react": "^16.8.19",
     "@types/react-burger-menu": "^2.2.4",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
@@ -28,7 +28,7 @@
     "react-router-dom": "^5.0.0",
     "react-router-scroll-4": "^1.0.0-beta.2",
     "react-scripts": "3.0.0",
-    "typescript": "^3.4.3",
+    "typescript": "^3.5.1",
     "use-media": "^1.3.0"
   },
   "scripts": {
