--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-burger-menu": "^2.2.4",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
+    "@types/react-transition-group": "^2.9.1",
     "classnames": "^2.2.6",
     "easing": "^1.2.1",
     "easings-css": "^1.0.0",
@@ -28,6 +29,7 @@
     "react-router-dom": "^5.0.0",
     "react-router-scroll-4": "^1.0.0-beta.2",
     "react-scripts": "3.0.0",
+    "react-transition-group": "^4.0.1",
     "typescript": "^3.5.1",
     "use-media": "^1.3.0"
   },
