--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.2.6",
     "easing": "^1.2.1",
     "easings-css": "^1.0.0",
+    "gatsby": "^2.8.2",
     "jss-plugin-extend": "^10.0.0-alpha.16",
     "matter-js": "^0.14.2",
     "mobx": "4",
