--- a/package.json
+++ b/package.json
@@ -29,17 +29,11 @@
     "react-intersection-observer": "^8.23.0",
     "react-router-dom": "^5.0.0",
     "react-router-scroll-4": "^1.0.0-beta.2",
-    "react-scripts": "3.0.0",
     "react-transition-group": "^4.0.1",
     "typescript": "^3.5.1",
     "use-media": "^1.3.0"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "scripts": {},
   "eslintConfig": {
     "extends": "react-app"
   },
