--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "easing": "^1.2.1",
     "easings-css": "^1.0.0",
     "gatsby": "^2.8.2",
+    "gatsby-plugin-tslint": "^0.0.2",
+    "gatsby-plugin-typescript": "^2.0.15",
     "jss-plugin-extend": "^10.0.0-alpha.16",
     "matter-js": "^0.14.2",
     "mobx": "4",
@@ -30,6 +32,11 @@
     "react-router-dom": "^5.0.0",
     "react-router-scroll-4": "^1.0.0-beta.2",
     "react-transition-group": "^4.0.1",
+    "tslint": "^5.17.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-loader": "^3.5.4",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^4.0.0",
     "typescript": "^3.5.1",
     "use-media": "^1.3.0"
   },
