--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mobx": "4",
     "mobx-react": "^5.4.3",
     "poly-decomp": "^0.3.0",
+    "prettier": "^1.17.1",
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.8",
     "react-dom": "^16.8.6",
