--- a/package.json
+++ b/package.json
@@ -41,7 +41,14 @@
     "typescript": "^3.5.1",
     "use-media": "^1.3.0"
   },
-  "scripts": {},
+  "scripts": {
+    "dev": "gatsby develop",
+    "build": "gatsby build",
+    "heroku-postbuild": "gatsby build",
+    "serve": "gatsby serve",
+    "type-check": "tsc --noEmit",
+    "lint": "tslint --project ."
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
