--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gatsby-plugin-root-import": "^2.0.5"
+  }
 }
