use App.tsx as gatsby layout
use gatsby-plugin-layout
enable decorator support
convert react router links to gatsby

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@material-ui/styles": "^4.0.1",
     "@types/classnames": "^2.2.7",
     "@types/jest": "^24.0.11",
@@ -13,10 +15,12 @@
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
     "@types/react-transition-group": "^2.9.1",
+    "babel-preset-gatsby": "^0.1.11",
     "classnames": "^2.2.6",
     "easing": "^1.2.1",
     "easings-css": "^1.0.0",
     "gatsby": "^2.8.2",
+    "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.0.15",
     "jss-plugin-extend": "^10.0.0-alpha.16",
