--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "easings-css": "^1.0.0",
     "gatsby": "^2.8.2",
     "gatsby-plugin-layout": "^1.0.15",
+    "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.0.15",
     "gatsby-source-contentful": "^2.0.43-schema-types.18",
