use contentful preview content on develop

--- a/.contentful.json.sample
+++ b/.contentful.json.sample
@@ -1,4 +1,6 @@
 {
-  "spaceId": "...",
-  "accessToken": "..."
+  "spaceId": "",
+  "deliveryToken": "",
+  "previewToken": "",
+  usePreview: "false"
 }
