more explicit netlify config

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,7 @@
 # Settings for `develop` branch deploys.
 # If your target branch is named something else,
 # the context will be "context.<NAME>.environment".
+[context.production]
+  CONTENTFUL_USE_PREVIEW = "false"
 [context.develop.environment]
   CONTENTFUL_USE_PREVIEW = "true"
