--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@contentful/rich-text-react-renderer": "^13.2.0",
     "@contentful/rich-text-types": "^13.1.0",
     "@graphql-codegen/typescript-operations": "^1.2.0",
+    "@material-ui/core": "^4.0.2",
     "@material-ui/styles": "^4.0.1",
     "@types/classnames": "^2.2.7",
     "@types/jest": "^24.0.11",
@@ -17,6 +18,7 @@
     "@types/react-burger-menu": "^2.2.4",
     "@types/react-dom": "^16.8.4",
     "@types/react-router-dom": "^4.3.2",
+    "@types/react-slick": "^0.23.4",
     "@types/react-transition-group": "^2.9.1",
     "babel-preset-gatsby": "^0.1.11",
     "classnames": "^2.2.6",
@@ -41,7 +43,9 @@
     "react-intersection-observer": "^8.23.0",
     "react-router-dom": "^5.0.0",
     "react-router-scroll-4": "^1.0.0-beta.2",
+    "react-slick": "^0.24.0",
     "react-transition-group": "^4.0.1",
+    "slick-carousel": "^1.8.1",
     "ts-optchain": "^0.1.7",
     "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
@@ -52,7 +56,7 @@
     "use-media": "^1.3.0"
   },
   "scripts": {
-    "dev": "gatsby develop",
+    "dev": "gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "heroku-postbuild": "gatsby build",
     "serve": "gatsby serve",
