add google tag manager

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@types/react-transition-group": "^2.9.1",
     "babel-preset-gatsby": "^0.1.11",
     "classnames": "^2.2.6",
+    "dotenv": "^8.0.0",
     "easing": "^1.2.1",
     "easings-css": "^1.0.0",
     "gatsby": "^2.8.2",
+    "gatsby-plugin-google-tagmanager": "^2.0.15",
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-tslint": "^0.0.2",
