--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.8",
     "react-dom": "^16.8.6",
+    "react-hubspot-form": "^1.3.7",
     "react-icons": "^3.6.1",
     "react-intersection-observer": "^8.23.0",
     "react-router-dom": "^5.0.0",
