--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@babel/plugin-proposal-decorators": "^7.4.4",
     "@contentful/rich-text-react-renderer": "^13.2.0",
     "@contentful/rich-text-types": "^13.1.0",
-    "@graphql-codegen/typescript-operations": "^1.2.0",
     "@material-ui/core": "^4.0.2",
     "@material-ui/styles": "^4.0.1",
     "@types/classnames": "^2.2.7",
@@ -25,13 +24,13 @@
     "dotenv": "^8.0.0",
     "easing": "^1.2.1",
     "easings-css": "^1.0.0",
-    "gatsby": "^2.8.2",
+    "gatsby": "^2.9.1",
     "gatsby-plugin-google-tagmanager": "^2.0.15",
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.0.15",
-    "gatsby-source-contentful": "^2.0.43-schema-types.18",
+    "gatsby-source-contentful": "^2.0.70",
     "jss-plugin-extend": "^10.0.0-alpha.16",
     "matter-js": "^0.14.2",
     "mobx": "4",
@@ -77,8 +76,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@graphql-codegen/cli": "^1.2.0",
-    "@graphql-codegen/typescript": "1.2.0",
     "gatsby-plugin-root-import": "^2.0.5"
   }
 }
