--- a/package.json
+++ b/package.json
@@ -54,8 +54,7 @@
     "tslint-loader": "^3.5.4",
     "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.5.1",
-    "use-media": "^1.3.0"
+    "typescript": "^3.5.1"
   },
   "scripts": {
     "dev": "gatsby develop -H 0.0.0.0",
