Add redirects to netlify.toml with 2015.hyfn.com case studies

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,108 @@
   CONTENTFUL_USE_PREVIEW = "false"
 [context.develop.environment]
   CONTENTFUL_USE_PREVIEW = "true"
+
+[[redirects]]
+  from = /work/id-mens/ 
+  to = https://2015.hyfn.com/work/id-mens/
+  status = 301
+  
+[[redirects]]
+  from = /work/doritos-mix-arcade/ 
+  to = https://2015.hyfn.com/work/doritos-mix-arcade/
+  status = 301
+  
+[[redirects]]
+  from = /work/eggerator/ 
+  to = https://2015.hyfn.com/work/eggerator/
+  status = 301
+  
+[[redirects]]
+  from = /work/pup-star/ 
+  to = https://hyfn.com/work/pup-star/
+  status = 301
+  
+[[redirects]]
+  from = /work/line-play-web-series/ 
+  to = https://2015.hyfn.com/work/line-play-web-series/ 
+  status = 301
+  
+[[redirects]]
+  from = /work/nba-asv/ 
+  to = https://2015-hyfn.com/work/nba-asv/ 
+  status = 301
+  
+[[redirects]]
+  from = /work/sirca/ 
+  to = https://2015-hyfn.com/work/sirca/  
+  status = 301
+  
+[[redirects]]
+  from = /work/new-balance/ 
+  to = https://2015.hyfn.com/work/new-balance/
+  status = 301
+  
+[[redirects]]
+  from = /work/ufc-gym/ 
+  to = https://2015.hyfn.com/work/ufc-gym/
+  status = 301
+  
+[[redirects]]
+  from = /work/visit-california-ad  
+  to = /	https://2015.hyfn.com/work/visit-california-ads/
+  status = 301
+  
+[[redirects]]
+  from = /work/heal-ads/  
+  to = https://2015.hyfn.com/work/heal-ads/
+  status = 301
+  
+[[redirects]]
+  from = /work/get-schooled/  
+  to = https://2015.hyfn.com/work/get-schooled/
+  status = 301
+  
+[[redirects]]
+  from = /work/alberta-rye/ 
+  to = https://2015.hyfn.com/work/alberta-rye/
+  status = 301
+  
+[[redirects]]
+  from = /work/screaming-queens/  
+  to = https://2015.hyfn.com/work/screaming-queens/
+  status = 301
+  
+[[redirects]]
+  from = /work/hp-zbook/ 
+  to = https://2015.hyfn.com/work/hp-zbook/
+  status = 301
+  
+[[redirects]]
+  from = /work/mgm/ 
+  to = https://2015.hyfn.com/work/mgm/
+  status = 301
+  
+[[redirects]]
+  from = /work/sirca/ 
+  to = https://2015.hyfn.com/work/sirca/
+  status = 301
+  
+[[redirects]]
+  from = /work/pro-rugby/ 
+  to = https://2015.hyfn.com/work/pro-rugby/
+  status = 301
+  
+[[redirects]]
+  from = /services/social-amplification/ 
+  to = https://hyfn.com/solutions
+  status = 301
+  
+[[redirects]]
+  from = /services/content-creation/ 
+  to = https://hyfn.com/solutions
+  status = 301
+  
+[[redirects]]
+  from = /services/creative-technology/ 
+  to = https://hyfn.com/solutions
+  status = 301
