--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hubspot-form": "^1.3.7",
     "react-icons": "^3.6.1",
     "react-intersection-observer": "^8.23.0",
+    "react-player": "^1.11.1",
     "react-router-dom": "^5.0.0",
     "react-router-scroll-4": "^1.0.0-beta.2",
     "react-slick": "^0.24.0",
