--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^4.3.2",
     "@types/react-slick": "^0.23.4",
     "@types/react-transition-group": "^2.9.1",
+    "axios": "^0.19.0",
     "babel-preset-gatsby": "^0.1.11",
     "classnames": "^2.2.6",
     "dotenv": "^8.0.0",
