--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-google-tagmanager": "^2.0.15",
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-material-ui": "^2.0.1",
+    "gatsby-plugin-react-helmet": "^3.1.0",
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.0.15",
     "gatsby-source-contentful": "^2.0.70",
@@ -40,6 +41,7 @@
     "react": "^16.8.6",
     "react-burger-menu": "^2.6.8",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-hubspot-form": "^1.3.7",
     "react-icons": "^3.6.1",
     "react-intersection-observer": "^8.23.0",
