--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.0",
     "babel-preset-gatsby": "^0.1.11",
     "classnames": "^2.2.6",
+    "detect-browser": "^4.5.1",
     "dotenv": "^8.0.0",
     "easings-css": "^1.0.0",
     "gatsby": "^2.9.1",
