--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyfn.com",
-  "version": "0.1.0",
+  "version": "1.0",
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
@@ -9,6 +9,7 @@
     "@contentful/rich-text-types": "^13.1.0",
     "@material-ui/core": "^4.1.0",
     "@material-ui/styles": "^4.1.0",
+    "@rehooks/component-size": "^1.0.2",
     "@types/classnames": "^2.2.7",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.126",
