--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "hyfn.com",
   "version": "1.0",
   "private": true,
+  "engines": {
+    "node": "10.16.0"
+  },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-proposal-decorators": "^7.4.4",
