--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-material-ui": "^2.0.1",
     "gatsby-plugin-react-helmet": "^3.1.0",
+    "gatsby-plugin-sentry": "^1.0.1",
     "gatsby-plugin-sitemap": "^2.2.0",
     "gatsby-plugin-tslint": "^0.0.2",
     "gatsby-plugin-typescript": "^2.0.15",
