--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^16.8.19",
     "@types/react-burger-menu": "^2.2.4",
     "@types/react-dom": "^16.8.4",
+    "@types/react-hamburger-menu": "^0.0.3",
     "@types/react-router-dom": "^4.3.2",
     "@types/react-slick": "^0.23.4",
     "@types/react-transition-group": "^2.9.1",
@@ -46,8 +47,8 @@
     "poly-decomp": "^0.3.0",
     "prettier": "^1.17.1",
     "react": "^16.8.6",
-    "react-burger-menu": "^2.6.8",
     "react-dom": "^16.8.6",
+    "react-hamburger-menu": "^1.1.1",
     "react-helmet": "^5.2.1",
     "react-hubspot-form": "^1.3.7",
     "react-icons": "^3.6.1",
