--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-router-scroll-4": "^1.0.0-beta.2",
     "react-slick": "^0.24.0",
     "react-transition-group": "^4.1.1",
+    "react-use": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "ts-optchain": "^0.1.7",
     "tslint": "^5.17.0",
